feat(security): introduce full StatelessCsrfFilter configuration